# fpr-censo-mcp

./: .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude-plugin/: plugin.json
commands/: censo.md
data/: barrios_pr.json  municipios_pr.json  variables_curadas.json
deploy/: deploy.sh
skills/interpreting-quality/: SKILL.md  moe-cv-reference.md
skills/querying-census-data/: SKILL.md  dataset-guide.md  geographic-hierarchy.md
src/: __main__.py  census_client.py  geography.py  profiles.py  quality.py  server.py
src/tools/: analysis.py  discovery.py  query.py
tests/: test_client.py  test_geography.py  test_quality.py  test_tools.py
