[project]
name = "fpr-censo-mcp"
version = "0.2.0"
description = "MCP Server para datos del U.S. Census Bureau, optimizado para Puerto Rico"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ricardo Rivera" }]
keywords = ["mcp", "census", "puerto-rico", "acs", "demographics"]

dependencies = [
    "mcp[cli]",
    "httpx",
    "pydantic>=2.0",
    "cachetools",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "respx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v"
